<resources>
    <string name="app_name">Rha</string>
    <string name="username"></string>
    <string name="password"></string>
    <string name="my_info">My info</string>
    <string name="drives_history">Drives history</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="app">App</string>
    <string name="my_profile">My profile</string>
    <string name="opennavigationdrawer">Navigation drawer open</string>
    <string name="closennavigationdrawer">Navigation drawer close</string>
    <string name="about_us">About Us</string>
    <string name="my">My Profile</string>
</resources>
